force-app/main/default/objects/Program_Template_Page__c/Program_Template_Page__c.object-meta.xml
<CustomObject>
    <description>Individual pages that are assigned to a program template.</description>
    <label>Program Template Page</label>
    <nameField>
        <label>Template Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Template Pages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>