force-app/main/default/objects/Program_Template_Page__c/fields/Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Page_Name__c</fullName>
    <label>Page Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Page_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CHP_APPINTAKE_AppReview_Page</fullName>
            </value>
            <value>
                <fullName>CHP_APPINTAKE_Contacts_Page</fullName>
            </value>
            <value>
                <fullName>CHP_APPINTAKE_Documents_Page</fullName>
            </value>
            <value>
                <fullName>CHP_APPINTAKE_Incentive_Page</fullName>
            </value>
            <value>
                <fullName>CHP_APPINTAKE_Schedule_Page</fullName>
            </value>
            <value>
                <fullName>CHP_APPINTAKE_Sites_Page</fullName>
            </value>
            <value>
                <fullName>CHP_APPINTAKE_Submission_Page</fullName>
            </value>
            <value>
                <fullName>CORE_APPINTAKE_Contacts_Page</fullName>
            </value>
            <value>
                <fullName>CORE_APPINTAKE_Documents_Page</fullName>
            </value>
            <value>
                <fullName>CORE_APPINTAKE_Review_Page</fullName>
            </value>
            <value>
                <fullName>CORE_APPINTAKE_Sites_Page</fullName>
            </value>
            <value>
                <fullName>CORE_APPINTAKE_Submission_Page</fullName>
            </value>
            <value>
                <fullName>CORE_CONAPP_CertAndSubmission_Page</fullName>
            </value>
            <value>
                <fullName>CORE_CONAPP_CompanyInformation_Page</fullName>
            </value>
            <value>
                <fullName>CORE_CONAPP_ContactInformation_Page</fullName>
            </value>
            <value>
                <fullName>CORE_CONAPP_ContractorDetails_Page</fullName>
            </value>
            <value>
                <fullName>CORE_CONAPP_Credentials_Page</fullName>
            </value>
            <value>
                <fullName>CORE_CONAPP_Documents_Page</fullName>
            </value>
            <value>
                <fullName>CORE_CONAPP_InstallerDetails_Page</fullName>
            </value>
            <value>
                <fullName>CORE_CONAPP_Launch_Page</fullName>
            </value>
            <value>
                <fullName>CORE_CONAPP_Program_Page</fullName>
            </value>
            <value>
                <fullName>CORE_CONAPP_Submission_Page</fullName>
            </value>
            <value>
                <fullName>CT_CONAPP_CertAndSubmission_Page</fullName>
            </value>
            <value>
                <fullName>CT_CONAPP_Document_Page</fullName>
            </value>
            <value>
                <fullName>CTenant_APPINTAKE_CompanyInfo_Page</fullName>
            </value>
            <value>
                <fullName>CTenant_APPINTAKE_Contacts_Page</fullName>
            </value>
            <value>
                <fullName>CTenant_APPINTAKE_Documents_Page</fullName>
            </value>
            <value>
                <fullName>CTenant_APPINTAKE_Incentive_Page</fullName>
            </value>
            <value>
                <fullName>CTenant_APPINTAKE_ModelingPkg_Page</fullName>
            </value>
            <value>
                <fullName>CTenant_APPINTAKE_Review_Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>