force-app/main/default/objects/Program_Template_Page__c/fields/Program_Template__c.field-meta.xml
<CustomField>
    <fullName>Program_Template__c</fullName>
    <description>Template page associated with this program template.</description>
    <inlineHelpText>Template page associated with this program template.</inlineHelpText>
    <label>Program Template</label>
    <referenceTo>Program_Template__c</referenceTo>
    <relationshipLabel>Program Template Pages</relationshipLabel>
    <relationshipName>Program_Template_Pages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>