force-app/main/default/objects/Program_Template_Page__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Order of the pages within a template.</description>
    <inlineHelpText>Order of the pages within a template.</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>